<resources>
    <string name="app_name">Top250</string>
    <string name="all_movies">ALL MOVIES</string>
    <string name="movies_to_watch">MOVIES TO WATCH</string>
    <string name="watched_movies">WATCHED MOVIES</string>
    <string name="back">BACK</string>
    <string name="title">title</string>
    <string name="average">average</string>
    <string name="release_date">release date</string>
    <string name="todo">TODO</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_watch_later">add to watch later</string>
    <string name="add_to_watched">add to watched</string>
    <string name="top_movies">Top Movies</string>
    <string name="back_image">back_image</string>
    <string name="no_movies_to_show">NO MOVIES TO SHOW</string>
    <string name="info">Info</string>
    <string name="movie_poster">movie_poster</string>
    <string name="popular_movies">POPULAR MOVIES</string>
    <string name="popular">POPULAR</string>
    <string name="top_rated">TOP RATED</string>
    <string name="watch_later">WATCH LATER</string>
    <string name="watched">WATCHED</string>
    <string name="movie_overview">movie overview</string>
    <string name="newest">NEWEST</string>
    <string name="movie_title">movie title</string>
    <string name="movie_year">movie_year</string>
    <string name="movie_rating">movie_rating</string>
    <string name="overview">overview</string>
</resources>
