<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".controllers.NavigationFragment">

    <Button
        android:id="@+id/top_movies_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/top_movies" />

    <Button
        android:id="@+id/movies_to_watch_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/movies_to_watch" />

    <Button
        android:id="@+id/watched_movies_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/watched_movies" />
</LinearLayout>







